feat: extend host spec

--- a/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/values.enc.yaml
@@ -1,36 +1,46 @@
 alertmanager:
     config:
         receivers:
-            - name: ENC[AES256_GCM,data:ZZIp0g==,iv:NxhhlaBhVU+jexytherxoUCUGNf9n9fI9N9BpgPM9UU=,tag:/CsL/P9UQS/Vgze1tXtXPg==,type:str]
-            - name: ENC[AES256_GCM,data:/jTtY0w=,iv:1TeLZq2vJWJTJpzCLm9QU88nxZl9bDuPzW+7Ebdg4yc=,tag:LFPWPlBOXmdn+H1wyr9yPA==,type:str]
+            - name: ENC[AES256_GCM,data:j4DxRw==,iv:f6mSC1m5c2QC0+4rtz3k4bNsYmSBsGnJLrP96W35CkE=,tag:AT7hfjGA26Nv1d0xfW4a3A==,type:str]
+            - name: ENC[AES256_GCM,data:aXexAJ4=,iv:nFjCPpkh3jWAjTGsKF0IG0e1ysj/OZMBsqoql14OKcU=,tag:uzC5Dr4z8SeJczd95MEA9g==,type:str]
               email_configs:
-                - to: ENC[AES256_GCM,data:OtljNPJQQmG1YheMVwr0WVuBdIuxAXDJ5g==,iv:vob2ckoL9aGh0C2KpHckvnP1FS2DGkCZI+iL9LUKraE=,tag:iHR0gTDviGdwI0KTiynnCA==,type:str]
-                  from: ENC[AES256_GCM,data:GVJ7MjNprfGIO+IVcKk=,iv:tRosm/sVeGjOjKB33f5QohgTlnNoaPuUQT2BBr1OoBM=,tag:pS9Dzs9jbM54xqXgghp5/Q==,type:str]
-                  smarthost: ENC[AES256_GCM,data:AQ7B+xo9YW22dEh+SL+RqIFZ2OoLCXRbJ3q3X7SMCw==,iv:J+kTswM9ywMxe9hGZQGn94rB6HO8KY3AM6Ms1ZpWM1o=,tag:dDOHRUkovZw4V51Vz/nRUg==,type:str]
-                  send_resolved: ENC[AES256_GCM,data:OkWXqw==,iv:A7uLS09qpbk9Juqq8WlLUN9d970ZKPX2e0YsuJZ4VfA=,tag:LMDB0u25dokk0LB9aX3vCw==,type:bool]
+                - to: ENC[AES256_GCM,data:lGxc+K+ewDLiiwb2ywObGSc6oTXq1BEfkw==,iv:koxIasXT15HwuabOrPi1q6pDpsoLUdAUETXQhovtlfc=,tag:WiueHpvRaHmIO3zPxUT+GQ==,type:str]
+                  from: ENC[AES256_GCM,data:kaUni7Zw5z2XxYiZ4Ig=,iv:+1HBkwa0OLBIdHuHa8uMACarqJMJVakOvyvYkBDMRVM=,tag:f9CSSrTusWy6ZrDICdXPrw==,type:str]
+                  smarthost: ENC[AES256_GCM,data:Qt1vRt4bRIWaW8QEVfU337UdEOxOJOBKKNRi5dDCBA==,iv:0O+/E9WrVPqgDV+PrhJ/Xb81drM6kB8eW+GW9oos8hc=,tag:FQeHH4q/BFPC/s2QG+hbgw==,type:str]
+                  send_resolved: ENC[AES256_GCM,data:ANXMcg==,iv:CDlig+0CfRz/3M83HXUQHHMQrrXtsmgDhmklFnHtRfE=,tag:QAqWwQViakcwuagjTO4npA==,type:bool]
 prometheus:
     prometheusSpec:
         additionalScrapeConfigs:
-            - job_name: ENC[AES256_GCM,data:sppGmNMDVnaOPMC9qw==,iv:OA87xOqtjavGj0oKNyPV+s6yeFIRmxzm2AiMUYM4LwU=,tag:d1xC29EJilGUr/bRhVHShA==,type:str]
-              scrape_interval: ENC[AES256_GCM,data:56tt,iv:ZzWK7tqsT9Aiz+jfXtiDKuSy+6scHWNAwYs75vvLMc8=,tag:brtFvjx/UqPlo2vCT+X5/A==,type:str]
+            - job_name: ENC[AES256_GCM,data:CFQnl0bOYidpdDgbig==,iv:dSsFA8zB1BQFGFCHr/PMJnwh1F1bfH+7x5ygr1Ogv6U=,tag:cjqUSjYSCvT1Cr5xM1cr7A==,type:str]
+              scrape_interval: ENC[AES256_GCM,data:IY0D,iv:RmP+An5Z+UoLN4qNsH5084wmavtxs5klqWoVYzFRLEY=,tag:S8GBAbSu1aHhWWskmgQT8g==,type:str]
               static_configs:
                 - targets:
-                    - ENC[AES256_GCM,data:eglO99teG46sO2ZclXg9cLJ7TSLim/Ri6a3PCQzFNgM=,iv:UEStRgKvO4aihGnzhrWESEFhqd1HpB4NcPMToe1C7zI=,tag:em9aquWBuQL9qz2KI7N2Gg==,type:str]
-                    - ENC[AES256_GCM,data:zICupXCG4Kf5djd4crKQ0NM3DVam4uONqahrVRrZo9I=,iv:Y387i9V+k3e3xfzYxCpB253BwQBftNnxG/WM29sswBU=,tag:Qs8QwasjSYdknMZ2Kt3XAQ==,type:str]
-                    - ENC[AES256_GCM,data:2Keo/g+G28AERAnI+cG3qsCVP7/FQt7n/gr/fSk15nk=,iv:5tux3e3jE7YGP93j/jwpKdj3dAA2EqLavXH50wOLKo0=,tag:J8XNxibvNLxFtg3rn5ceHw==,type:str]
-                    - ENC[AES256_GCM,data:iueqDiHt9j87o9QK0keIgzMdNeIuGQdQQojjtEDkLAQ=,iv:Oat3x1rN5ZB2tqPq3Hn4sPbEd/M7nAagsiE2IswdyyU=,tag:OJQVHlPyD4oNZtClpeEsLw==,type:str]
-                    - ENC[AES256_GCM,data:kL4vqHx2r562NtLYWSg6/P6YwDxElKvA7ZpWovKtSvc=,iv:VON/fn5xc/bdn1ZMCRl7sR8QgCSVyWXtLqcRJkSJVAQ=,tag:/PvTowzT5XT3bdimtWLJ4Q==,type:str]
-                    - ENC[AES256_GCM,data:NnLlZXasYzCpJYX2dkSB0jOvq94I4QEoEPqG/g==,iv:KhRPkawBc65im0fK53rIPWgSt1B7K0nDis5PZc2QW4k=,tag:zoNq9/e+pOdWZy8BevbdWw==,type:str]
-                    - ENC[AES256_GCM,data:t0y0RYnSu8EPxFf/h+uGSAww2W1GcvlCUPeLZg==,iv:31Li2alLAjzetgI8TjO6BmHrH+IZEG9TExcrrHm+KDk=,tag:N+oOAs3TvAmrHpu/4D9Zdw==,type:str]
-                    - ENC[AES256_GCM,data:QgnWFnl5VEsZLHrM0qwV60PyL+ZWEL2j4WhtUg==,iv:DkNX7B24+aQyj9gEYNH5a6SBiuKPiZ/liu5by9FIfO4=,tag:6YK8HIOAzfMKheP4WX+oGA==,type:str]
-                    - ENC[AES256_GCM,data:mvyzO/JDbMXHmaZyabAUEUQYq8laypVNxV42Kw==,iv:SS+7440w9kWjz15ok6itpjicV5HaKtQdZC1tltLWa3Q=,tag:IrUKU0EMAXUwih1AO0rJRw==,type:str]
-                    - ENC[AES256_GCM,data:Sq1QKVvTYcIC6sDVjdludfzyoS7G3hjxVPD2sA==,iv:XYsRMrJnM4dL2nKypbWewUx87mmKpfHFWX28bBJ0+mY=,tag:rYbfori6a9EOL687G3kZqw==,type:str]
-                    - ENC[AES256_GCM,data:G2SfWaAOptiLelcp1mroQKjQXdnJS7vXZ1iYrg==,iv:W6wLCjzldXN2/uSM5an726eQ8xAN8T1494PnqXh2ETA=,tag:HbI59M1iNBiCaccXcpfZVw==,type:str]
-                    - ENC[AES256_GCM,data:AjKLL0YOnfigAyPrst3YIh4Ajq9hNg==,iv:wfAAiTG+P/ArXif/R53Z07UNIH6DDjJ0vKpPvivXFjE=,tag:gMHg+Eyk5AM4x2Qv6Xuwuw==,type:str]
-                    - ENC[AES256_GCM,data:ThQ+JPCSUUXN8YobL9E5,iv:g6myTY1SnsoTbUA+ERU51cqyR4hJSOhRIbjz8W/MkX0=,tag:FQ/EmCHHsTURfb7lYjt8Dg==,type:str]
-                    - ENC[AES256_GCM,data:mwbvPxHM3rZbeMVX0ZNpw0vfo5BA09+9ckXk2WBS2P/o/w==,iv:DcmWjkO7VgMcnR2DStsQvaaQc+6ec+evtIjyD6ZTEk4=,tag:tX0tBp8dGxqGkpKbq4uZYg==,type:str]
-                    - ENC[AES256_GCM,data:Y/+Jo68jByyLgNRtTtAxduKi,iv:aAjBDkHnMkvMew+19fK5K1UIOjFT5On1dkRBARoKC3w=,tag:ntgT37UQCL5tjCNFenOCLw==,type:str]
-                    - ENC[AES256_GCM,data:Pf+BHw6utIO1F7XcMMuSOgh4bqsqhoTZ2x8=,iv:z8oh6uhjxo0uW8cp1Z5PJinc9vkRjvBy2ULQ7kohmNo=,tag:eg78fQD5JEdmhEm/IC26Zw==,type:str]
+                    - ENC[AES256_GCM,data:dbGxdgrJu3zm9bYYQp7GB+cyxQA1ZZvDy7Asoe38Q/k=,iv:85vNm+nrqpcDqWSpIcgqlQBz5jXKw4RS2hDPA2v98wk=,tag:c81bU3j7OlQewU6oD+gHsA==,type:str]
+                    - ENC[AES256_GCM,data:n5UpZIwHdiRV8bY09+X9ukEdi+VCh0pDtPpLC/2EjVE=,iv:hu4YOO5WUqBC27vzxDYk/NFwmkXD83GjXLDBHnKfOek=,tag:WBRbbzfOF5S0h70qutCcRg==,type:str]
+                    - ENC[AES256_GCM,data:iLD+chijjkZAocCV1JpjQXYtuDLgVGPqQ6E4T91fzvw=,iv:GYlZvGgXycZ/nmV/XeQfRw3EV2zWzlyZ4RTgEpExU5o=,tag:etmYdP5hpZET9eybFWIZgA==,type:str]
+                    - ENC[AES256_GCM,data:yGtLJvVEbpt7aFy4+WpuYlvNyasnY9BXt0tioTwF86o=,iv:yEFfFc2FP84VOzk4ej3TXKaRjw0BpQjVk1Lm+ADdhpg=,tag:zzICZ0w9sHIb4338gPMi7w==,type:str]
+                    - ENC[AES256_GCM,data:AZnWMppC3Exor+6/2/5Im5wvoJkVjuUXR7leQHPOeWs=,iv:2KrAOeH+/Gi4cYL59LIeAzqr/p6w180b7LU52PTjEl4=,tag:crkBw9nn29svLgThEt0wzQ==,type:str]
+                    - ENC[AES256_GCM,data:Cm6YjqTIzl701uaGoCaaCqHbJctHMoDNpTcteg==,iv:9Rd+uCgqHAEfBpDMWHqwlEXNHnIq+QIU8ioGT11DQao=,tag:z1vZ1dshNIJechBZjMi3mA==,type:str]
+                    - ENC[AES256_GCM,data:BgaKtbFY1/91bp3sGft/w1rt/pW7fKkLKJuQoA==,iv:qLYyK9DgBUQNWwBYs9n8akgMzTfzxkzAXHZjit+jDqw=,tag:1YDEf94qurylbUdTJew3VA==,type:str]
+                    - ENC[AES256_GCM,data:shWsxOpFKZBfopYipggQaj1LjFxu+5q/7DmtSw==,iv:VFN6soBy8mBk8EVmZEBHPg3FynWx2AxZWyaiW7/mgPI=,tag:eBMbK/CYgN/e8LxpursRcQ==,type:str]
+                    - ENC[AES256_GCM,data:C5T+CQ8v5Q8K3b8jjkPVce89OSsrSD759a+7nA==,iv:npQ7IvX4dkiMbPLqqH2QyFvXbjS0RAR357S+jAEoUvo=,tag:vbJuCdbAD+qWFvfCJSQqhw==,type:str]
+                    - ENC[AES256_GCM,data:0CrX8E6AZsvupQ3xFMiVJxgR+g5RJGfpx7oQdg==,iv:xwdG0/ItoLSIvHu2ohQsqsl6/Ppt3q67w+eYCEv9vNw=,tag:3RYkT8eis2xzbNcQ4tmKhQ==,type:str]
+                    - ENC[AES256_GCM,data:gy48WptuhRs+AYc571EUsMQ0W+dgEbID2BDxrA==,iv:IMRvQtX7yzNqS/i0yLoySDko2CYLm4KMGgA+JBPSmv0=,tag:oWD4GkPX7ZOda7d+iaFk9Q==,type:str]
+                    - ENC[AES256_GCM,data:T14BgHTzRGOq7UNDBH8rTd7FFtArWA==,iv:ThMg9X36btTde8Fi7StPS+NYeDgUCgWvHkjJMw+BL1Y=,tag:WCJzV/vv4Hgf4GTLR0u/ow==,type:str]
+                    - ENC[AES256_GCM,data:2YI5UX/b8xNXJDFCbkaK,iv:IT5YYdhBtxj2incUDSF0UCbu2JE4cmhRutCpnWIcZ2A=,tag:yZt7ZQR4CJQHWt7nuHOD3g==,type:str]
+                    - ENC[AES256_GCM,data:6gYuo2gB3WCikOiGlbcT5b1wbBICafiVAhXYdLfpjQFHpw==,iv:8o+zs5TTHroSHqjuOMUs2iVewhpvNwuUdm5gkvbqY7Y=,tag:26TaBvgvlClvJtFLT54/Pg==,type:str]
+                    - ENC[AES256_GCM,data:T3YBL3Po2QI5Z2NLPGoxqN8V,iv:5JQAY4zIcPIM0Ovg3BqWmM2a7c37UosVVQfVw3XwtZ8=,tag:QOLnWvSKsnuLSUSWf3H+hg==,type:str]
+                    - ENC[AES256_GCM,data:EtWlzr/tip4fSksXy8HfPs8fQNYPYMQeLhE=,iv:jTBDfXL7vX8bghbTjcZrzYlIi26YsXpVxaDJbet/3VQ=,tag:YOYdOIYlJGjy3VIpEaF1Dw==,type:str]
+                    - ENC[AES256_GCM,data:VYjmWLYjXTovjFzguA1umgCvO7fTzco9FUO0XNtHb5HPuRk=,iv:8Ft0f/uAf3cFGVJXYVe2G2jdXkNV32aCi9e50x74ji4=,tag:KObaUttH9QFy2o/sxCq5yQ==,type:str]
+                    - ENC[AES256_GCM,data:JaizHP2AxolVLCH1aJFey66+tdWX8fpKEF7elK5GC26LgH4WJg==,iv:lZkdVVGyO86E1hOZSvo8BghuE4yOdqdg6e+ETYr0oH8=,tag:b5Xv3wfIsLOLF/Va5U3pFw==,type:str]
+                    - ENC[AES256_GCM,data:Zuou7iba5Jc3IRfJF41BKCWel2iMVGM0w+jDdt/Vr92Zl89hpQ==,iv:bdRONgHTVL7pHNgMpwNU47+YtKjM4B5i9iCcflcuSxI=,tag:ZPyTNfnCZjY7pEH4JN4wsg==,type:str]
+                    - ENC[AES256_GCM,data:a0HV0EJvuQHqIz02s5jG8cs1blTwwti6PUe9Z1f0PkgX46aURQ==,iv:foDl8Rz9gffaNP/ciAgjy8DUgYTX+qjJKIPHwjx0YKI=,tag:SaYtZ6C36M6bFLct/upIHA==,type:str]
+                    - ENC[AES256_GCM,data:ugzvLm6oACAxXBlNu3H/ROvcD8J8AGWfvw7VlxarOPAijbsBLA==,iv:vYEmgOxkSf3i59YoHc0w5ZruqyOkhLLlHV6YEdKcDDU=,tag:UYJptRQCOMDASPnYnHJ7zg==,type:str]
+                    - ENC[AES256_GCM,data:4bTa1PA0kzCgHRmRvuz74nAnRT+oEDEffPGEfQ6dJYJeQY3/Kw==,iv:BSegX1Gt420PKxz8QPcfrzqtvTxcq3e8QRlhETSmmHQ=,tag:qIZTfXtL67Kc/V4dv4K4PA==,type:str]
+                    - ENC[AES256_GCM,data:Hpgre9K5pOgqEVW5zowL9S8d,iv:bNDejIgJzOmOFtkerdTCwWHsaObg9bh/9i5vrIhVNQ4=,tag:s4G08Y1SSvfi0yyRnockhg==,type:str]
+                    - ENC[AES256_GCM,data:+CQLULJ5jiAOUG5x2gYwwKDkyzI4gnKim46EEhWhEpQeF5z8+iy0Gg==,iv:Hi+zHovOOzwIESSjhSvxpF1IpW1ZTpvKr0RfSyLkhcY=,tag:2JruqR3J6TtLbuTZJuiQWA==,type:str]
+                    - ENC[AES256_GCM,data:o1dLykvSfDVUwlmR7uN/kn66mNLztHshYsPqaVuE842Kmosoj8SuJ6fC,iv:pSGS0rILDL1dpa+JurV8tOtUeNdOCjVfJ/vfhRwZ6V4=,tag:rHUv7deF78fQkU6KjCpQPA==,type:str]
+                    - ENC[AES256_GCM,data:uXD5LKkf+GcqkLc/+ILf932STX7gTsQ=,iv:5hjPJL0dcxTXo7GQLuHmk60Ife5g+7W8CdgdBOPQotQ=,tag:5VDGtiOFocQv8+6O5rNk0g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -40,14 +50,14 @@ sops:
         - recipient: age1n4ar7vyp3nmv844ep8ct4ea4d6uz7xflvug0pyz08ujek0ks2emsxzhn55
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSytGdm96NHBKaXcwZmlQ
-            TVNneWRMaXhiTHVGY0E1b21UQndCajVVSXlFClo3ajFGVjE1TUE3bDR6TktIOFZ2
-            KzVRTkpPTjVIVmZlSzZiSVhXQU1oM3cKLS0tIHB4Q0Q2TkZKN05FSXZHNVJzWGkx
-            Y2xCWmlsaUwycWZrY080bWNESW1jQTQK2afOMqEcKAh8sesrh/iLkL2KkUqrVkhq
-            SXytmW0AcVclucEt4enlls4XoP1vc1IQ6/vbni3gLzQCt+r6Lhx+Ug==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUYzNrZzJDekhqaUhpVnVL
+            cWh2SHdmbVpoZTFBYVJRb25KbW0rbUVBaEIwCm1aRXcrUjZTdEowbllCTXo3aHBv
+            eHdwaE9QZ0I4T2FsdGtwZ2ZWS1BrTk0KLS0tIGdiVFlCWjNEVWZPRVVCRWVSUUZU
+            dERzSUdKZllTcFpPYmNhRFJSdUJyaHcKYYAr4jZG1zMwb0BUygjnGdp+iWZl81x7
+            4kFcmGyKJl1NF9BhHtnrg5uT/VSA7EBhAWVdZoM4unsduWqP2+/EEw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-13T16:43:29Z"
-    mac: ENC[AES256_GCM,data:gH+U4Wz5aKsuMluLHOXhcGgjOHuI74NAoyY3aPA698o9S2o3uwiOZSU5ADXPWNOv4a2cVqtfJnUTr9GZLVD0EvhpgaS+gQbjzhI/X9ALfPF2Jx1RgRSECk2bJeXgk+IR4lDGZiUQW3UBClmg3wpw3Cy8ucGAFsY6a/jpnbaRq7k=,iv:Is84NuMgqbQp7pxZiUe9Ky79AUMUqBkmJiBirMwRlUg=,tag:uBBC3fmDyFuM7C1h6u0IMA==,type:str]
+    lastmodified: "2023-01-13T18:56:17Z"
+    mac: ENC[AES256_GCM,data:dPWYVNQp+fDonfbUY88VnWBjas84Cu5ytKwMX9jBCxw/HUlukRKbaz9x+ozFxxgz0gdfK5gZNWnqOD334E6l5CJzetJyk2PwxypaFEehkontvlhMDq2Gg+xROxdHu7tev5vmd3ZsLTDwtJa9IsP1KSpQxaQCv+usiDOcVUgzWHo=,iv:fUT0B08ucyVaqg7Z8ZWNDpiiZ9v4i50QBrHYcRP1Ap8=,tag:nRuCEDUez7wnNrZrplIIJQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
