--- a/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
+++ b/clusters/production/monitoring/kube-prometheus-stack/helm.yaml
@@ -35,7 +35,7 @@ spec:
         global:
           resolve_timeout: 5m
         route:
-          group_by: ["alertname", "job"]
+          group_by: ["alertname", "job", "severity"]
           group_wait: 30s
           group_interval: 5m
           repeat_interval: 6h
